PixelPropsUtils: Convert process/package name to lowercase
* for processes and package names with incosistent letter case for e.g "GoogleCamera" and "com.google.", Google often uses capital letters on some of their app package names, even more their processes letter case can also be inconsistent.

Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>